--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,51 +1,53 @@
-[tool.poetry]
+[project]
 name = "tgcf"
 version = "1.1.8"
 description = "The ultimate tool to automate custom telegram message forwarding."
-authors = ["aahnik <daw@aahnik.dev>"]
-license = "MIT"
+authors = [{ name = "aahnik", email = "daw@aahnik.dev" }]
+requires-python = "~=3.10"
 readme = "README.md"
-repository = "https://github.com/aahnik/tgcf"
-documentation = "https://github.com/aahnik/tgcf/wiki"
+license = "MIT"
+dependencies = [
+    "requests>=2.28.1,<3",
+    "typer>=0.7.0,<0.8",
+    "python-dotenv>=0.21.0,<0.22",
+    "pydantic>=1.10.2,<2",
+    "Telethon==1.26.0",
+    "cryptg>=0.4.0,<0.5",
+    "Pillow>=9.3,<11.0",
+    "hachoir>=3.1.3,<4",
+    "aiohttp>=3.8.3,<4",
+    "tg-login>=0.0.4,<0.0.5",
+    "watermark.py>=0.0.3,<0.0.4",
+    "pytesseract>=0.3.7,<0.4",
+    "rich>=12.6.0,<13",
+    "verlat>=0.1.0,<0.2",
+    "streamlit==1.17.0",
+    "PyYAML~=6.0",
+    "pymongo>=4.3.3,<5",
+    "altair<5",
+    "multidict>=6.1.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-requests = "^2.28.1"
-typer = "^0.7.0"
-python-dotenv = "^0.21.0"
-pydantic = "^1.10.2"
-Telethon = "1.26.0"
-cryptg = "^0.4.0"
-Pillow = ">=9.3,<11.0"
-hachoir = "^3.1.3"
-aiohttp = "^3.8.3"
-tg-login = "^0.0.4"
-"watermark.py" = "^0.0.3"
-pytesseract = "^0.3.7"
-rich = "^12.6.0"
-verlat = "^0.1.0"
-streamlit = "^1.15.2"
-PyYAML = "^6.0"
-pymongo = "^4.3.3"
+[project.urls]
+Repository = "https://github.com/aahnik/tgcf"
+Documentation = "https://github.com/aahnik/tgcf/wiki"
 
-[tool.poetry.dev-dependencies]
-black = {version = "^22.10.0", allow-prereleases = true}
-isort = "^5.10.1"
-pre-commit = "^2.20.0"
+[project.scripts]
+tgcf = "tgcf.cli:app"
+tgcf-web = "tgcf.web_ui.run:main"
 
-
-[tool.poetry.scripts]
-tgcf = 'tgcf.cli:app'
-tgcf-web = 'tgcf.web_ui.run:main'
-
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.17.0"
-pylint = "^2.15.8"
+[dependency-groups]
+dev = [
+    "black>=22.10.0,<23",
+    "isort>=5.10.1,<6",
+    "pre-commit>=2.20.0,<3",
+    "ipykernel>=6.17.0,<7",
+    "pylint>=2.15.8,<3",
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.isort]
 profile = "black"
